added cfg and minor fixes
Change-Id: I9b3d2b4f278f7b6e832242eb8b8b47300b068cdb

--- a/pnc-a0.core.cfg
+++ b/pnc-a0.core.cfg
@@ -12,7 +12,13 @@ $SLA = 24; # in hours
 
 
 @FILES = (
-  "$ENV{MODEL_ROOT}/cfg/code_collab.cfg",
+  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.integ_env.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.exe.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.fe.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.ooo.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.mlc.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.meu.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.pm.cfg",
 );
 
 #happens last
