added core_emu cfg
Change-Id: Iea4e26c4fc9105ddd0a8449c2c6303348ff794e4

--- a/pnc-a0.core.cfg
+++ b/pnc-a0.core.cfg
@@ -19,6 +19,7 @@ $SLA = 24; # in hours
  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.mlc.cfg",
  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.meu.cfg",
  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.pm.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.core_emu.cfg",
 );
 
 #happens last
