--- a/pnc-a0.core.cfg
+++ b/pnc-a0.core.cfg
@@ -21,6 +21,7 @@ $SLA = 24; # in hours
  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.pm.cfg",
  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.core_emu.cfg",
  "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.te_common.cfg",
+ "$ENV{MODEL_ROOT}/core/common/cfg/code_collab/pnc-a0.ucode.cfg",
 );
 
 #happens last
